adding funcionality with js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="calculator-grid">
       <div class="display">
-        <div class="previous-operand">2.484 *</div>
-        <div class="current-operand">658.255</div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
       <button data-all-clear class="span-two">AC</button>
       <button data-delete>DEL</button>
